@@ -1,3 +1,9 @@
+pagegen (2.0.1) stable; urgency=low
+
+  * url_include_index site.conf setting added
+
+ -- Oliver Fields <oliver@phnd.net>  Thu, 19 Mar 2015 18:34:38 +0100
+
 pagegen (2.0.0) stable; urgency=low
 
   * Initial release
