@@ -1,7 +1,8 @@
 Title: Home page
 Menu exclude: True
 
-Welcome to Pagegen v2
-=====================
+Welcome to Pagegen
+==================
 
-Same idea, new language.
+Every page is a file.
+
